Fixing repo for Elantra2012 TPMS best performance.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -112,6 +112,7 @@ rtl_433_SOURCES      = abuf.c \
                        devices/thermopro_tp12.c \
                        devices/tpms_citroen.c \
                        devices/tpms_ford.c \
+                       devices/tpms_elantra2012.c \
                        devices/tpms_pmv107j.c \
                        devices/tpms_renault.c \
                        devices/tpms_toyota.c \
