--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -111,6 +111,7 @@ add_executable(rtl_433
 	devices/thermopro_tp12.c
 	devices/tpms_citroen.c
 	devices/tpms_ford.c
+	devices/tpms_elantra2012.c
 	devices/tpms_pmv107j.c
 	devices/tpms_renault.c
 	devices/tpms_toyota.c
